# fast-api-ed

./: .gitignore  learning.py  main.py  main_five.py  main_four.py  main_six.py  main_two.py  my_training.py  pyproject.toml
mains/: main.py  main_eight.py  main_three.py  my_training.py
my_super_project/: sql_app.db
my_super_project/sql_app/: main.py  models.py  sql_app.db
my_super_project/sql_app/alembic/: env.py
my_super_project/sql_app/alembic/versions/: 919b379993b0_first.py
