[tool.poetry]
name = "fast-api-ed"
version = "0.1.0"
description = ""
authors = ["annett21 <annettarasevich@gmail.com>"]
readme = "README.md"
packages = [{include = "fast_api_ed"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.95.1"}
email-validator = "^2.0.0.post1"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
sqlalchemy = "^2.0.12"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
